--- a/set.env
+++ b/set.env
@@ -12,6 +12,6 @@ NUMERO_OWNER=2250700401301
 WARN_COUNT=2
 STARTING_BOT_MESSAGE=oui
 ANTI_VUE_UNIQUE=oui
-PM_CHATBOT=non
+PM_CHATBOT=oui
 HEROKU=non
 ANTI_COMMAND_SPAM=non
